--- a/action.yml
+++ b/action.yml
@@ -34,3 +34,6 @@ runs:
   main: 'dist/setup/index.js'
   post: 'dist/cache-save/index.js'
   post-if: success()
+              - name: Setup .NET Core SDK
+                uses: actions/setup-dotnet@v3.2.0
+            
